# open-entity

./: .env.example  .gitignore  COMMIT_BATCH_2.sh  COMMIT_COMMAND.sh  Dockerfile  Dockerfile.api  Dockerfile.fly  ENTITY_CREATED_INVENTORY.md  GCP_API_SPEC.md  GCP_MARKETPLACE_STATUS.md  MOLTBOOK_POSTS_QUEUE.md  README.md  README_ja.md  SOLANA_WALLETS.md  SYSTEM_OVERVIEW.md  docker-compose.api.yml  docker-compose.pair.yml  docker-compose.yml  entity-cli.py  fly.toml  package-lock.json  pyproject.toml  run_local.sh  start-pair-docker.sh  start-pair.sh  start.sh  watchdog.sh
.github/workflows/: ci.yml
docs/: A2A_PROTOCOL.md  ADAPTER_AUTOGEN.md  DECENTRALIZED_REGISTRY.md  entity-ch-operations.md  getting-started.md  profiles.md
examples/: autogen_integration.py
examples/default/: profile.yaml
scripts/: deploy_bootstrap.sh
workspace/: $ENTITY_CHECKLIST.md  $ENTITY_DISTRIBUTION.json  $ENTITY_READINESS_REPORT.md  $ENTITY_STATUS_REPORT.md  $ENTITY_TOKENOMICS.md  $ENTITY_TOKEN_INFO.json  .env.example  .gcp_api_key  .gitignore  AI_ONBOARDING_SCORECARD.md  AI_ROULETTE_LAUNCH.md  API_KEYS_PRIORITY.md  API_KEY_ACQUISITION_STATUS.md  APPROVAL_FLOW_TEST_REPORT.md  AUTO_REGISTRATION_STATUS.md  BETA_OUTREACH_TARGETS.md  BETA_USER_ACQUISITION_PLAN.md  BOOTSTRAP_DEPLOY.md  COMPLETION_REPORT.md  COMPLETION_REPORT_20260201_1402.md  COMPLETION_REPORT_20260201_1455.md  CONTRIBUTING.md  CRITICAL_ISSUE_MARKETPLACE_SYNC.md  DEPLOY_GUIDE.md  DEPLOY_HUGGINGFACE_REPLIT.md  DEPLOY_SIMPLE_API.md  DISCORD_OUTREACH_STRATEGY.md  DOCKER_FIX_FOR_ENTITY_B_C.md  DOCUMENT_CLEANUP_REPORT_S3.md  Dockerfile  Dockerfile.optimized  Dockerfile.roulette  Dockerfile.simple  Dockerfile.spaces  E2E_WORKFLOW_TEST_REPORT.md  EMERGENCY_RESPONSE_PLAN.md  ENTITY_A_REGISTRATION_FINAL_REPORT.md  ENTITY_A_REGISTRATION_REPORT.md  ENTITY_A_STATUS_REPORT.md  ENTITY_B_DEMO_REPORT.md  (+241 more)
(+1042 files in other folders)
